<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/bg_register">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/cvSeparator" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_register"
        android:id="@+id/tvHintLogowania"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/cvSeparator"
        android:layout_centerHorizontal="true"
        android:textColor="#052535"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etMeil"
        android:hint="@string/hint_meil"
        android:textColorHint="#FF052535"
        android:layout_below="@+id/tvHintLogowania"
        android:layout_alignLeft="@+id/cvSeparator"
        android:layout_alignStart="@+id/cvSeparator"
        android:layout_alignRight="@+id/cvSeparator"
        android:layout_alignEnd="@+id/cvSeparator"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="12.5dp"
        android:layout_marginRight="12.5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_below="@+id/etMeil"
        android:hint="@string/hint_password"
        android:layout_alignLeft="@+id/etMeil"
        android:layout_alignStart="@+id/etMeil"
        android:layout_alignRight="@+id/etMeil"
        android:layout_alignEnd="@+id/etMeil"
        android:textColorHint="#FF052535" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_password"
        android:id="@+id/cbPassword"
        android:layout_below="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword"
        android:onClick="showPassword"
        android:textColor="#FF052535" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/tvHintLogowania"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivLogo"
            android:contentDescription="@string/logo"
            android:background="@drawable/logo"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp" />
    </RelativeLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"

        android:layout_below="@+id/cbPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rejestracja"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:id="@+id/btn_LogIn" />

</RelativeLayout>