<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alertDialogTitle"
        android:id="@+id/tv_ExitDialog_Title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alertDialogMessage"
        android:id="@+id/tv_ExitDialog_Message"
        android:layout_below="@+id/tv_ExitDialog_Title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertDialogNegativeBtn"
        android:id="@+id/btnNegative"
        android:layout_below="@+id/tv_ExitDialog_Message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:padding="20dp"
        android:background="@drawable/roundshapebutton"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertDialogPositiveBtn"
        android:id="@+id/btnPositive"
        android:layout_below="@+id/tv_ExitDialog_Message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/roundshapebutton"
        android:padding="20dp"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp" />
</RelativeLayout>